Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-345

libhdfs integration doesn't work for Mac

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.1.0
    • 0.2.0
    • C++
    • None
    • macOS

    Description

      The runtime linking to libhdfs assumes a Linux ("libhdfs.so") or Windows ("hdfs.dll") name:

      https://github.com/apache/arrow/blob/master/cpp/src/arrow/io/libhdfs_shim.cc#L347

      The Mac name is "libhdfs.dylib". I recommend making the logic to find libhdfs similar to the logic that finds libjvm.

      I can submit a patch if desired.

      Attachments

        Activity

          People

            chrisaycock Christopher Aycock
            chrisaycock Christopher Aycock
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: