ARROW-345: Proper locations of libhdfs and libjvm on Mac